# edgeicp_ros

./: CMakeLists.txt  package.xml
include/: KDTree.h  Liegroup.h  MyAlgorithm.h  edgeicp.h  random_function.h  robust_weighting.h
launch/: edgeicp_launch.launch
src/: KDTree.cpp  Liegroup.cpp  MyAlgorithm.cpp  edgeicp.cpp  main_script.cpp  random_function.cpp  robust_weighting.cpp
